--- a/main.html
+++ b/main.html
@@ -7,6 +7,44 @@
 </head>
 
 <body>
+
+	<table>
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ayush</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Avi</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>Dinesh</td>
+			</tr>
+		</tbody>
+		
+	</table>
+
+	<h2>List of medias</h2>
+
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="Water"></li>
+		<li>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		<li> <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
+			
+		</audio></li>
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
