--- a/main.html
+++ b/main.html
@@ -7,44 +7,54 @@
 </head>
 
 <body>
-
 	<table>
 		<thead>
-			<tr>
-				<th>Roll numbers</th>
-				<th>Names</th>
-			</tr>
-		</thead>
+		<tr>
+			<th>Names</th>
+			<th>Roll numbers</th>
+		</tr>
+	</thead>
 		<tbody>
 			<tr>
+				<td>Sachin</td>
 				<td>1</td>
-				<td>Ayush</td>
 			</tr>
 			<tr>
+				<td>naval</td>
 				<td>2</td>
-				<td>Avi</td>
 			</tr>
 			<tr>
+				<td>Punit</td>
 				<td>3</td>
-				<td>Dinesh</td>
 			</tr>
 		</tbody>
 		
 	</table>
 
 	<h2>List of medias</h2>
-
 	<ol>
-		<li><img src="https://picsum.photos/id/123/200/300" alt="Water"></li>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300" alt="wter-drops" >
+		</li>
 		<li>
 			<video controls>
-				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+			</video>
+			<video controls>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/ogg">
 			</video>
 		</li>
-		<li> <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" >
-			
-		</audio></li>
+		<li>
+			<audio controls>
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+            <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+            Your browser does not support the audio tag.
+            </audio> 
+		</li>
 	</ol>
+	
+	
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
